--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,34 +11,19 @@
         android:layout_height="wrap_content">
 
         <!-- TODO: Update blank fragment layout -->
-        <LinearLayout
+        <SearchView
             android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginRight="16dp"
-            android:background="@drawable/rounded_border"
+            android:background="@drawable/search_view_rounded_corner"
             android:elevation="4dp"
             android:gravity="center_vertical"
-            android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <ImageView
-                android:id="@+id/search_icon"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:background="@drawable/ic_search_gray_24dp" />
-
-            <EditText
-                android:id="@+id/textView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="#fff"
-                android:hint="Search..." />
-        </LinearLayout>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/imgRecent"
@@ -87,39 +72,48 @@
             app:layout_constraintStart_toEndOf="@+id/imgBudaya"
             app:layout_constraintTop_toTopOf="@+id/imgBudaya" />
 
-        <ImageButton
+        <Button
             android:id="@+id/imageButton"
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:layout_margin="8dp"
+            android:layout_marginBottom="8dp"
+            android:background="@drawable/less_rounded_border"
+            android:elevation="15dp"
+            app:layout_constraintBottom_toTopOf="@+id/imageButton2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imgBudaya"
-            tools:src="@tools:sample/backgrounds/scenic[11]" />
+            tools:src="@android:color/darker_gray" />
 
-        <ImageButton
+        <Button
             android:id="@+id/imageButton2"
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:layout_margin="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:background="@drawable/less_rounded_border"
+            android:elevation="15dp"
+            app:layout_constraintBottom_toTopOf="@+id/imageButton3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageButton"
-            tools:src="@tools:sample/backgrounds/scenic[5]" />
+            tools:src="@android:color/darker_gray" />
 
-        <ImageButton
+        <Button
             android:id="@+id/imageButton3"
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:background="@drawable/less_rounded_border"
+            android:elevation="15dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageButton2"
-            tools:src="@tools:sample/backgrounds/scenic" />
+            tools:src="@android:color/darker_gray" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
