fixed -> login with firebase

--- a/app/src/main/res/layout/activity_detail_modul.xml
+++ b/app/src/main/res/layout/activity_detail_modul.xml
@@ -92,4 +92,14 @@
         app:layout_constraintEnd_toEndOf="@+id/btn_tarian"
         app:layout_constraintStart_toStartOf="@+id/btn_tarian"
         app:layout_constraintTop_toBottomOf="@+id/btn_tarian" />
+
+    <ImageView
+        android:id="@+id/iv_back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/ic_arrow_back_accent_36dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
