--- a/app/src/main/res/layout/fragment_quest.xml
+++ b/app/src/main/res/layout/fragment_quest.xml
@@ -5,9 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".fragments.QuestFragment">
 
-    <fragment
-        android:id="@+id/frg_quest_holder"
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:text="Quest Fragment" />
 
 </FrameLayout>
