--- a/app/src/main/res/layout/list_recent_learn.xml
+++ b/app/src/main/res/layout/list_recent_learn.xml
@@ -16,7 +16,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@drawable/background1" />
+        tools:srcCompat="@android:color/darker_gray" />
 
     <TextView
         android:id="@+id/listTitle"
