--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -21,7 +21,7 @@
             android:paddingEnd="16dp"
             android:paddingTop="4dp"
             android:paddingBottom="4dp"
-            android:text="My Account"
+            android:text="My Profile"
             android:textSize="18sp" />
 
         <TextView
